--- a/composer.json
+++ b/composer.json
@@ -10,9 +10,11 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "doctrine/dbal": "^4.2",
         "inertiajs/inertia-laravel": "^2.0",
         "laravel/framework": "^11.31",
         "laravel/sanctum": "^4.0",
+        "laravel/telescope": "^5.3",
         "laravel/tinker": "^2.9",
         "tightenco/ziggy": "^2.0"
     },
